# Hello_World-QT

./: README.md
Hello_World/: CMakeLists.txt  main.cpp
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  apphello_world_qmltyperegistrations.cpp  build.ninja  qtcsettings.cmake
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-df4b766e6d5c96a3af1b.json  cmakeFiles-v1-a8121d06a4c090ed0184.json  codemodel-v2-5805c9ee79e71655ed45.json  directory-.-Debug-b72592b1a1b7abcaf9a6.json  index-2023-04-19T12-00-19-0424.json  target-all_qmllint-Debug-d0f11c73d38f23321138.json  target-all_qmllint_json-Debug-3cedf1cec08c3f3ef36f.json  (+10 more)
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appHello_World.cmake
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appHello_World.cmake  Qt6_QmlPlugins_Imports_appHello_World.rsp
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.rcc/: appHello_World_raw_qml_0.qrc  qmake_Hello_World.qrc  qrc_appHello_World_raw_qml_0.cpp  qrc_qmake_Hello_World.cpp
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.rcc/qmlcache/: appHello_World_Main_qml.cpp  appHello_World_qml_loader_file_list.rsp  appHello_World_qmlcache_loader.cpp
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/Hello_World/: Main.qml  qmldir
build-Hello_World-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/appHello_World_autogen/: deps
